Cleaning up some divs and code fore readability, and remove a scrolling issue (#27)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,11 +46,3 @@
 .leftIcon {
   margin-right: 12px;
 }
-
-.bgStratosphere {
-  background-color: #006A8E;
-}
-
-.bgPineStand {
-  background-color: #4A773C;
-}
